# cmake_cplusplus

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/hello/: helloTest.cpp  helloTest.h
test/: CMakeLists.txt  demo.cpp
